infrastructure/cicsk8s/galasa-prod/galasa-prod/templates/namespace-galasa-prod.yaml
#
# Copyright contributors to the Galasa project 
# 
apiVersion: v1
kind: Namespace
metadata:
  name: galasa-prod
