infrastructure/cicsk8s/galasa-prod/galasa-prod/templates/expose.yaml
#
# Copyright contributors to the Galasa project 
# 
apiVersion: v1
kind: Service
metadata:
  name: ras-external
  namespace: galasa-prod
spec:
  type: NodePort
  ports:
  - name: couchdbport
    port: 5984
    protocol: TCP
    targetPort: 5984
  selector:
    app: ras

---

apiVersion: v1
kind: Service
metadata:
  name: cps-external
  namespace: galasa-prod
spec:
  type: NodePort
  ports:
  - name: etcd-client
    port: 2379
    protocol: TCP
    targetPort: 2379
  selector:
    app: cps
---

apiVersion: v1
kind: Service
metadata:
  name: dss-external
  namespace: galasa-prod
spec:
  type: NodePort
  ports:
  - name: etcd-client
    port: 2379
    protocol: TCP
    targetPort: 2379
  selector:
    app: dss
---

apiVersion: v1
kind: Service
metadata:
  name: creds-external
  namespace: galasa-prod
spec:
  type: NodePort
  ports:
  - name: etcd-client
    port: 2379
    protocol: TCP
    targetPort: 2379
  selector:
    app: creds
