infrastructure/cicsk8s/galasa-prod/galasa-prod/templates/server-api.yaml
#
# Copyright contributors to the Galasa project 
# 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: galasa-prod
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      name: api
      labels:
        app: api
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        applevel: critical
      containers:
      - name: resource-monitor
        image: harbor.galasa.dev/galasadev/galasa-ibm-boot-embedded-amd64:prod
        imagePullPolicy: Always
        command: ["java"]
        args: 
        - -jar
        - boot.jar
        - --obr
        - file:galasa.obr
        - --trace
        - --api
        - --bootstrap
        - file:/bootstrap.properties
        ports:
        - containerPort: 9010
          name: metrics
        - containerPort: 9011
          name: health
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 60
        volumeMounts:
        - name: bootstrap
          mountPath: /bootstrap.properties
          subPath: bootstrap.properties
      volumes:
      - name: bootstrap
        configMap:
          name: bootstrap-file

---

apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: galasa-prod
  labels:
    app: api
spec:
  ports:
  - port: 9010
    name: metrics
  - port: 9011
    name: health
  - port: 8080
    name: http
  selector:
    app: api
