infrastructure/cicsk8s/galasa-prod/galasa-prod/templates/server-creds-etcd3.yaml
#
# Copyright contributors to the Galasa project 
# 
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: creds
  namespace: galasa-prod
  labels:
    app: creds
spec:
  serviceName: creds
  replicas: 1
  selector:
    matchLabels:
      app: creds
  template:
    metadata:
      name: creds
      labels:
        app: creds
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        longhorn: "true"
        applevel: critical
      containers:
      - name: etcd
        image: harbor.galasa.dev/galasadev/etcd:v3.2.25
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2379
          name: peer
        - containerPort: 2380
          name: client
        volumeMounts:
        - name: data
          mountPath: /var/run/etcd
        lifecycle:
          preStop:
            exec:
              command:
                - "/bin/sh"
                - "-ec"
                - |
                  EPS=""
                  for i in $(seq 0 $((${INITIAL_CLUSTER_SIZE} - 1))); do
                      EPS="${EPS}${EPS:+,}http://${SET_NAME}-${i}.${SET_NAME}:2379"
                  done
                  HOSTNAME=$(hostname)
                  member_hash() {
                      etcdctl member list | grep http://${HOSTNAME}.${SET_NAME}:2380 | cut -d':' -f1 | cut -d'[' -f1
                  }
                  SET_ID=${HOSTNAME##*[^0-9]}
                  if [ "${SET_ID}" -ge ${INITIAL_CLUSTER_SIZE} ]; then
                      echo "Removing ${HOSTNAME} from etcd cluster"
                      ETCDCTL_ENDPOINT=${EPS} etcdctl member remove $(member_hash)
                      if [ $? -eq 0 ]; then
                          # Remove everything otherwise the cluster will no longer scale-up
                          rm -rf /var/run/etcd/*
                      fi
                  fi
        command:
          - "/bin/sh"
          - "-ec"
          - |
            [...]
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - creds
              topologyKey: kubernetes.io/hostname
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          # upstream recommended max is 700M
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: creds
  namespace: galasa-prod
  labels:
    app: creds
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
  - port: 2379
    name: etcd-server
  - port: 2380
    name: etcd-client
  selector:
    app: creds
