infrastructure/cicsk8s/galasa-prod/galasa-prod/templates/server-metrics.yaml
#
# Copyright contributors to the Galasa project 
# 
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics
  namespace: galasa-prod
  labels:
    app: metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics
  template:
    metadata:
      name: metrics
      labels:
        app: metrics
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        applevel: critical
      containers:
      - name: metrics
        image: harbor.galasa.dev/galasadev/galasa-ibm-boot-embedded-amd64:prod
        imagePullPolicy: Always
        command: ["java"]
        args: 
        - -jar
        - boot.jar
        - --obr
        - file:galasa.obr
        - --metricserver
        - --bootstrap
        - $(BOOTSTRAP_URI)
        ports:
        - containerPort: 9010
          name: metrics
        - containerPort: 9011
          name: health
        livenessProbe:
          httpGet:
            path: /
            port: 9011
          initialDelaySeconds: 60
          periodSeconds: 60

---
apiVersion: v1
kind: Service
metadata:
  name: metrics
  namespace: galasa-prod
  labels:
    app: metrics
spec:
  ports:
  - port: 9010
    name: metrics
  - port: 9011
    name: health
  selector:
    app: metrics
