infrastructure/cicsk8s/galasa-prod/galasa-prod/templates/simbank-expose.yaml
#
# Copyright contributors to the Galasa project 
# 
apiVersion: v1
kind: Service
metadata:
  name: simbank-telnet-external
  namespace: galasa-prod
spec:
  type: NodePort
  ports:
  - name: telnet
    port: 2023
    protocol: TCP
    targetPort: 2023
  selector:
    app: simbank

---

apiVersion: v1
kind: Service
metadata:
  name: simbank-webservice-external
  namespace: galasa-prod
spec:
  type: NodePort
  ports:
  - name: webservice
    port: 2080
    protocol: TCP
    targetPort: 2080
  selector:
    app: simbank

---

apiVersion: v1
kind: Service
metadata:
  name: simbank-database-external
  namespace: galasa-prod
spec:
  type: NodePort
  ports:
  - name: databas
    port: 2027
    protocol: TCP
    targetPort: 2027
  selector:
    app: simbank

---

apiVersion: v1
kind: Service
metadata:
  name: simbank-zosmf-external
  namespace: galasa-prod
spec:
  type: NodePort
  ports:
  - name: zosmf
    port: 2040
    protocol: TCP
    targetPort: 2040
  selector:
    app: simbank
