infrastructure/cicsk8s/galasa-prod/galasa-prod/templates/ingress-new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-new
  namespace: galasa-prod
spec:
  ingressClassName: nginx
  rules:
  - host: "galasa-galasa-prod.cicsk8s.hursley.ibm.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api
            port:
              number: 8080
      - pathType: Prefix
        path: "/testcatalog"
        backend:
          service:
            name: testcatalog
            port:
              number: 8080
  tls:
  - hosts:
    - '*.cicsk8s.hursley.ibm.com'
