infrastructure/cicsk8s/galasa-prod/galasa-prod/templates/ingress-ras.yaml
#
# Copyright contributors to the Galasa project 
# 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ras
  namespace: galasa-prod
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: "galasaras-cicsk8s.hursley.ibm.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ras
            port:
              number: 5984
